--- a/mxcube3/static/SampleView.html
+++ b/mxcube3/static/SampleView.html
@@ -16,15 +16,17 @@
     <script src="//fb.me/JSXTransformer-0.11.1.js"></script>
     <script src="http://underscorejs.org/underscore-min.js"></script>
     <script src="http://backbonejs.org/backbone-min.js"></script> 
-    <script src="./build/Functions.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>
+    <script src="./build/SampleView/Functions.js"></script>
+
 </head>
 <body>
     <div id="SampleCentringHere">
     <!--<script src="https://togetherjs.com/togetherjs-min.js"></script> -->
     <script src="./build/react.js"></script>
-    <script src="./build/SampleTree.js"></script>
-    <script src="./build/ExperimentConfig.js"></script>
-    <script src="./build/SampleView.js"></script>
-    <script src="./build/SampleMain.js"></script>
-    <script src="./build/MainView.js"></script>
+    <script src="./build/SampleView/SampleTree.js"></script>
+    <script src="./build/SampleView/ExperimentConfig.js"></script>
+    <script src="./build/SampleView/SampleView.js"></script>
+    <script src="./build/SampleView/SampleMain.js"></script>
+    <script src="./build/SampleView/MainView.js"></script>
  </body>
