--- a/mxcube3/static/SampleView.html
+++ b/mxcube3/static/SampleView.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+    <script src="./build/bootstrap.min.js"></script>
+    <script src="./build/react.js"></script>
     <script src="./build/bootstrap-editable.min.js"></script>
     <link src="./build/css/bootstrap-editable.css" rel="stylesheet"/>
     <script src="//fb.me/react-with-addons-0.11.1.js"></script>
