--- a/mxcube3/static/index.html
+++ b/mxcube3/static/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <div class = "container-fluid">
+    <div class="row" id="error_log_panel">
+    </div>
     <div class="row" id="header">
     </div>
     <div class="row">
