split code in different assets/bundles; output files are named according to entries names added code to load different application parts depending on hash location new MXNavbar component, to be able to change active state for NavItems added HTML layout divs for data collection page

--- a/mxcube3/static/index.html
+++ b/mxcube3/static/index.html
@@ -8,20 +8,28 @@
   <div class = "container-fluid">
     <div class="row" id="header">
     </div>
-    <div class="row">
+    <div class="row" id="samples"> 
       <div class="col-md-5" id="filter_input">
       </div>
       <div class="col-md-2" id="check_sc_contents">
       </div>
-      <div class="col-md-5" id="go_to_dc">
+      <div class="row">
+        <div class="col-lg-12 col-centered" id="sample_grid">
+        </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12 col-centered" id="sample_grid">
+    <div class="row" id="dc">
+      <div id="SampleCentring">
+      </div>
+      <div id="beamline">
+      </div>
+      <div id="SampleTreeGoesHere">
+      </div>
+      <div id="standardcollection">
       </div>
     </div>
   </div>
-  <script src="bundle.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
 
