Cleaned up index.html
Removed GUI decisions to the components

--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -5,32 +5,8 @@
   <title>MXCuBE 3</title>
 </head>
 <body>
-  <div class = "container-fluid">
-    <div class="row" id="error_notification_panel">
-    </div>
-    <div class="row" id="header">
-    </div>
-    <div class="row" id="samples"> 
-      <div class="col-md-5" id="filter_input">
-      </div>
-      <div class="col-md-2" id="check_sc_contents">
-      </div>
-      <div class="row">
-        <div class="col-lg-12 col-centered" id="sample_grid">
-        </div>
-      </div>
-    </div>
-    <div class="row" id="dc">
-      <div id="SampleCentring">
-      </div>
-      <div id="beamline">
-      </div>
-      <div id="SampleTreeGoesHere">
-      </div>
-      <div id="standardcollection">
-      </div>
-    </div>
-  </div>
+
+  <div id="main"></div>
   <script src="main.js"></script>
 </body>
 </html>
