--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>MXCuBE 3</title>
+  <!-- Get version 1.1.0 of Fabric.js from CDN -->
+<script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.5.0/fabric.min.js" ></script>
 </head>
 <body>
   <div id="main"></div>
