removed main-content CSS, replaced by padding in <body> as recommended in bootstrap documentation

--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -6,7 +6,7 @@
 <script src="./fabric.min.js" ></script>
 </head>
 <body>
-  <div id="main"></div>
+  <div id="main" style="padding-top: 52px"></div>
   <script src="main.js"></script>
 </body>
 </html>
