--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -5,7 +5,7 @@
   <title>MXCuBE 3</title>
 </head>
 <body>
-  <div id="main" style="padding-top: 52px"></div>
+  <div id="main" style="margin-left: 65px; padding-top:52px"></div>
   <script src="main.js"></script>
 </body>
 </html>
