--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MXCuBE 3</title>
 </head>
-<body>
+<body style="padding-top: 55px">
   <div id="main"></div>
   <script src="main.js"></script>
 </body>
