--- a/mxcube3/ui/index.html
+++ b/mxcube3/ui/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>MXCuBE 3</title>
 </head>
-<body style="padding-top: 55px; background-color: #F5F5F5; height:100%;">
+<body style="/*padding-top: 55px;*/ background-color: #F5F5F5; height:100%; ">
   <div id="main"></div>
   <script src="main.js"></script>
 </body>
